# ais

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
ais/: __init__.py  boolean_data.py  data.py  hp_search.py  model_creation.py  model_io.py  models.py  sgd.py  spectral.py  tracing.py  training.py
ais/exps/: __init__.py  cnn_exps.py  cnn_hp_search.py  gru_hp_search.py  lstm_hp_search.py  mlp_exps.py  mlp_hp_search.py  rnn_exps.py  sgd_wfsa_hp_search.py  spectral_wfsa_hp_search.py  srnn_hp_search.py  transformer_exps.py  transformer_hp_search.py  wfsa_exps.py
ais/viz/: __init__.py  display.py  drawing.py  fsm_viz.py  geometry.py  level_viz.py  probing.py  views.py
unittests/: __init__.py  test_boolean_data.py  test_data.py  test_language_in_space.py  test_nmf.py  test_spectral_building_basis.py  test_spectral_hankel_matrix_filling.py  test_spectral_learning.py  test_spectral_parameter_estimation.py  test_spectral_target_estimation.py  test_svd.py  test_tracing.py
unittests/viz/: test_geometry.py  test_probing.py  test_views.py
